--- a/public/assets/css/pages.css
+++ b/public/assets/css/pages.css
@@ -751,7 +751,7 @@
     }
 
     main>section[aria-labelledby="notifications-heading"] {
-      padding: 1.25rem 1rem;
+      padding: 1.25rem 1.25rem;
     }
 
     main>section[aria-labelledby="notifications-heading"]>header {
@@ -770,7 +770,7 @@
 
     main>section[aria-labelledby="notifications-heading"]>ol>li>article {
       gap: 0.75rem;
-      padding: 0 0.75rem;
+      padding: 0.75rem;
     }
 
     main>section[aria-labelledby="notifications-heading"]>nav[aria-label="Pagination"]>ul>li>a>span,
